# ai_daily_notes

./: .env.example  .gitignore  README.md  pyproject.toml  topics.txt
.github/workflows/: daily-note.yml
notes/: 2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md  2026-07-25.md  2026-07-26.md
practice/: README.md
practice/2026-07-18/: practice.py
src/ai_daily_notes/: assembler.py  config.py  main.py  models.py  topics.py  writer.py
src/ai_daily_notes/collectors/: rss.py
src/ai_daily_notes/generators/: __init__.py  code_example.py  concept.py  news_translator.py  quiz.py  term.py  tip.py
src/ai_daily_notes/publishers/: discord.py  notion.py
tests/: test_discord.py  test_news_translator.py  test_notion.py  test_writer.py
