[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-daily-notes"
version = "0.1.0"
description = "매일 AI 학습 노트를 자동으로 생성하는 개인 학습 비서"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.0",
    "notion-client>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ai-daily-notes = "ai_daily_notes.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_daily_notes"]
